--- a/templates/layout.html
+++ b/templates/layout.html
@@ -104,7 +104,9 @@
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
-            {% block body %}{% endblock %}
+            {% block body %}
+            
+            {% endblock %}
         <footer class="small text-center text-muted">
             Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
         </footer>
