--- a/templates/success.html
+++ b/templates/success.html
@@ -8,6 +8,6 @@
 <div class="form-group">
 <h4 class="alert alert-success" role="alert"> {{ message }} </h4>
 
-<a href={{ url_for('index') }}>Log In</a>
+<a href={{ url_for('login') }}>Log In</a>
 </div>
 {% endblock %}
