--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,6 +70,7 @@
                         <li class="nav-item"><a class="nav-link" href="/quote">Buy</a></li>
                         <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                                            <span>Welcome {{ user }} </span>
 
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
