--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
 <div id="firstContainer" class="">
   <div>
         <h1 id="contentTitle" class="vivify driveInLeft
-     duration-2000 ">Learn to invest without<br> risking your money</h1>
+     duration-2000 ">Learn to invest without<br> risking your money!</h1>
     </div>
 
     <div>
