--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width" >
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- AOS on scroll animations-->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -19,7 +19,7 @@
 
 
         <!-- Font Awsome 5 Icons -->
-<link rel="stylesheet" href="static/all.css">
+        <link rel="stylesheet" href="static/all.css">
 
         <!-- CHARTS-->
         <link rel="stylesheet" href="static/charts.min.css">
@@ -47,12 +47,20 @@
         <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
             
 
+
+        <!-- Alerts-->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="sweetalert2.all.min.js"></script>
+        
         <!-- http://getbootstrap.com/docs/4.5/ -->
-        <script src="/static/main.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script
-        src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="/static/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        
 
         <title>Finance: {% block title %}{% endblock %}</title>
 
@@ -69,8 +77,8 @@
                     <ul class="navbar-nav mr-auto mt-2 ">
                         <li class="nav-item"><a class="nav-link" href="/quote">Buy</a></li>
                         <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/crypto">Crypto</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
-                                            <span>Welcome {{ user }} </span>
 
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
@@ -105,9 +113,7 @@
         <main class="container p-5">
             {% block main %}{% endblock %}
         </main>
-            {% block body %}
-            
-            {% endblock %}
+            {% block body %}{% endblock %}
         <footer class="small text-center text-muted">
             Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
         </footer>
