--- a/templates/quote.html
+++ b/templates/quote.html
@@ -6,10 +6,11 @@
 
 {% block main %}
     <h5>{{ message }} </h5>
+    <h5>Enter a stock symbol</h5>
 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 m-auto shadow p-4">
     <form id="form" action="/quote" method="POST">
     <div class="one">
-          <input id="symbolone" autocomplete="off" name="symbol" type="text" autofocus placeholder="Stock symbol" class="form-control" />
+          <input id="symbolone" autocomplete="off" name="symbol" type="text" autofocus placeholder="example: TSLA" class="form-control" />
     </div>
                   <ul id="stockinfo">
 
