--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,17 +68,17 @@
 
     <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
-            <a class="navbar-brand" href="/"><span class="red">Finance</span></a>
+            <a class="navbar-brand" href="{{ url_for('welcome') }}"><span class="red">Finance</span></a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse  navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2 ">
-                        <li class="nav-item"><a class="nav-link" href="/quote">Buy</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/crypto">Crypto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('buy') }}">Buy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('sell') }}">Sell</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('crypto') }}">Crypto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('history') }}">History</a></li>
 
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
@@ -87,16 +87,16 @@
                               <span class="caret"></span></button>
                               <ul class="dropdown-menu">
                                 <li><a href="#">Account Info</a></li>
-                                <li><a href="/customer_service">Customer service</a></li>
-                                <li><a href="/rate">Delete my account</a></li>
+                                <li><a href="{{ url_for('customer_service') }}">Customer service</a></li>
+                                <li><a href="{{ url_for('rate') }}">Delete my account</a></li>
                               </ul>
                             </div>
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Log Out</a></li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Log In</a></li>
                     </ul>
                 {% endif %}
             </div>
