--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -10,14 +10,13 @@
         <thead>
             <tr>
                 <th>Crypto</th>
-                <th>Price</th>
                 <th>Quantity</th>
                 <th>Total</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
-                <td colspan="4"></td>
+                <td colspan="3"></td>
                 <td style="font-weight: bold;">{{ total }}</td>
             </tr>
         </tfoot>
@@ -26,7 +25,6 @@
                 {% for crypto in cryptosOwned %}
                 <tr>
                     <td>{{ crypto.symbol }}</td>
-                    <td>{{ crypto.price }} $</td>
                     <td>{{ crypto.shares }}</td>
                     <td>{{ crypto.cryptocash }} $</td></td>
                 </tr>
@@ -41,7 +39,10 @@
     <img id="BNB" src="/static/bnb.svg" width="35" height="35">
     <img id="XRP" src="/static/xrp.svg" width="35" height="35">
     <img id="ADA" src="/static/ada.svg" width="35" height="35">
+    <img id="DOT" src="/static/dot.svg" width="35" height="35">
+    <img id="LTC" src="/static/ltc.svg" width="35" height="35">
     <img id="DOGE" src="/static/doge.svg" width="35" height="35">
+    <img id="SHIB" src="/static/shib.png" width="35" height="35">
 </div>
 <div class="form-group" id="showcrypto">
 </div>
@@ -110,7 +111,14 @@
     
                 }
                 else { /* If error doesnt exist */
-                    location.reload();
+                    var x = $('#cryptoid').val();
+                    var y = $("[id=" + x + "]");
+                    y.attr('class', 'vivify spin');
+                    setTimeout(
+                        function() 
+                        {
+                            location.reload();
+                        }, 2000); 
     
                 }
             });
@@ -182,6 +190,8 @@ $(document).ready(function() {
         event.preventDefault(); /* Prevents the form from doing what it typically does, submit the form its way */
     });
 });
+
+
 
 </script>
 
