--- a/templates/content.html
+++ b/templates/content.html
@@ -55,14 +55,14 @@
 
     <!--GRID TEST__________________________________________-->
 
-<div id="containerz">
+<div class="form-group" id="containerz">
 
-  <div data-aos="zoom-in"> 
+  <div class="form-group" data-aos="zoom-in"> 
     <h3>Buy stocks with real time prices</h3>
     <p>Practice trading with a virtual $10,000 and play our stock market game. </p>
 </div>
 
-<div data-aos="zoom-in"> 
+<div class="form-group" data-aos="zoom-in"> 
   <h3>How it works?</h3>
           <ul>
               <li>Sing up</li>
@@ -71,16 +71,17 @@
           </ul>
 </div>
 
-    <div data-aos="zoom-in">  
+    <div class="form-group" data-aos="zoom-in">  
         <h3>Sign up today!</h3>    
             If you're hesitant, scared of the risk or don't have any knowledge of the stock market... <br>
     </div>
+        
         
 </div>
     
 </div>
 <!-- Footer -->
-<div id="form-content">
+<div class="form-group" id="form-content">
 <h4>{{ message }}</h4>
 <div id="contactForm" class="form-group" data-aos="zoom-out">
 <h3 id="formtitle">Contact Us</h3>
@@ -111,7 +112,7 @@
 
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start bg-light text-muted form-group">
   <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -191,6 +192,9 @@
   </div>
   <!-- Copyright -->
 </footer>
+
+
+
 <!-- Footer -->
 <!--
 data-aos="fade-up"
