--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,28 @@
 </div>
 </div>
 
+<div class="containercss">  
+
+  <div> 
+    <h3>Buy stocks with real time prices</h3>
+    <p>Practice trading with a virtual $10,000 and play our stock market game. </p>
+</div>
+
+<div> 
+  <h3>How it works?</h3>
+          <ul>
+              <li>Sing up</li>
+              <li>Start with 10.000$</li>
+              <li>Practice trading with your virtual cash. </li>
+          </ul>
+</div>
+
+    <div>  
+        <h3>Sign up today!</h3>    
+            If you're hesitant, scared of the risk or don't have any knowledge of the stock market... <br>
+    </div>
+</div>
+
 <script>
 /*
 document.addEventListener('DOMContentLoaded', function(){
